Уточнил API и документацию
