# app/controllers/transfers_controller.rb
@@ -1,7 +1,7 @@
 class TransfersController < ApplicationController
   def create
-    @source = Account.find_by(account_number: params[:source_account])
-    @destination = Account.find_by(account_number: params[:destination_account])
+    @source = Account.find_by(account_number: params[:source_account_number])
+    @destination = Account.find_by(account_number: params[:destination_account_number])
     @amount = params[:amount] || 0
 
     @transfer = Transfer.create(
